<resources>
    <string name="app_name">Attestation</string>
    <string name="auto_club_honda">Auto Club Honda</string>
    <string name="login_to_your_account">Войти в личный кабинет</string>
    <string name="email_address_View">Адрес электронной почты</string>
    <string name="passwordView">Пароль</string>
    <string name="to_come_in_button">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password_view">Забыл(а) пароль.</string>
    <string name="restore_password_view">"востановить "</string>
    <string name="restore_password_button">"востановить "</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="news_button">Новости</string>
    <string name="buy_ar">Купить авто</string>
    <string name="sell_car">Продать Авто</string>
    <string name="title_activity_registration_aktivity">RegistrationAktivity</string>
    <string name="registration_main">registration_main</string>
    <string name="club_forum">Форум клуба</string>
    <string name="title_activity_club_forum">ClubForum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="club_forum_window">не успел наполнить контент в связи с переносом времени сдачи с 18.00 на 15.00</string>
    <string name="registration_name_view">Имя</string>
    <string name="registration_view">Регистрация</string>
    <string name="registration_surname_view">Фамилия</string>
</resources>